binary.output
Terminals unused in grammar

   ALL


State 8 conflicts: 1 shift/reduce


Grammar

    0 $accept: S "end of file"

    1 S: block

    2 block: chunk

    3 chunk: %empty
    4      | chunk_layer

    5 chunk_layer: stat
    6            | stat SEMICOLON
    7            | stat laststat
    8            | stat laststat SEMICOLON
    9            | stat SEMICOLON laststat
   10            | stat SEMICOLON laststat SEMICOLON
   11            | chunk_layer stat
   12            | chunk_layer stat SEMICOLON
   13            | chunk_layer stat laststat
   14            | chunk_layer stat laststat SEMICOLON
   15            | chunk_layer stat SEMICOLON laststat
   16            | chunk_layer stat stat SEMICOLON laststat SEMICOLON

   17 stat: Name

   18 laststat: RETURN
   19         | BREAK


Terminals, with rules where they appear

"end of file" (0) 0
error (256)
ALL (258)
SEMICOLON (259) 6 8 9 10 12 14 15 16
RETURN (260) 18
BREAK (261) 19
Name (262) 17


Nonterminals, with rules where they appear

$accept (8)
    on left: 0
S (9)
    on left: 1, on right: 0
block (10)
    on left: 2, on right: 1
chunk (11)
    on left: 3 4, on right: 2
chunk_layer (12)
    on left: 5 6 7 8 9 10 11 12 13 14 15 16, on right: 4 11 12 13 14
    15 16
stat (13)
    on left: 17, on right: 5 6 7 8 9 10 11 12 13 14 15 16
laststat (14)
    on left: 18 19, on right: 7 8 9 10 13 14 15 16


State 0

    0 $accept: . S "end of file"

    Name  shift, and go to state 1

    $default  reduce using rule 3 (chunk)

    S            go to state 2
    block        go to state 3
    chunk        go to state 4
    chunk_layer  go to state 5
    stat         go to state 6


State 1

   17 stat: Name .

    $default  reduce using rule 17 (stat)


State 2

    0 $accept: S . "end of file"

    "end of file"  shift, and go to state 7


State 3

    1 S: block .

    $default  reduce using rule 1 (S)


State 4

    2 block: chunk .

    $default  reduce using rule 2 (block)


State 5

    4 chunk: chunk_layer .
   11 chunk_layer: chunk_layer . stat
   12            | chunk_layer . stat SEMICOLON
   13            | chunk_layer . stat laststat
   14            | chunk_layer . stat laststat SEMICOLON
   15            | chunk_layer . stat SEMICOLON laststat
   16            | chunk_layer . stat stat SEMICOLON laststat SEMICOLON

    Name  shift, and go to state 1

    $default  reduce using rule 4 (chunk)

    stat  go to state 8


State 6

    5 chunk_layer: stat .
    6            | stat . SEMICOLON
    7            | stat . laststat
    8            | stat . laststat SEMICOLON
    9            | stat . SEMICOLON laststat
   10            | stat . SEMICOLON laststat SEMICOLON

    SEMICOLON  shift, and go to state 9
    RETURN     shift, and go to state 10
    BREAK      shift, and go to state 11

    $default  reduce using rule 5 (chunk_layer)

    laststat  go to state 12


State 7

    0 $accept: S "end of file" .

    $default  accept


State 8

   11 chunk_layer: chunk_layer stat .
   12            | chunk_layer stat . SEMICOLON
   13            | chunk_layer stat . laststat
   14            | chunk_layer stat . laststat SEMICOLON
   15            | chunk_layer stat . SEMICOLON laststat
   16            | chunk_layer stat . stat SEMICOLON laststat SEMICOLON

    SEMICOLON  shift, and go to state 13
    RETURN     shift, and go to state 10
    BREAK      shift, and go to state 11
    Name       shift, and go to state 1

    Name      [reduce using rule 11 (chunk_layer)]
    $default  reduce using rule 11 (chunk_layer)

    stat      go to state 14
    laststat  go to state 15


State 9

    6 chunk_layer: stat SEMICOLON .
    9            | stat SEMICOLON . laststat
   10            | stat SEMICOLON . laststat SEMICOLON

    RETURN  shift, and go to state 10
    BREAK   shift, and go to state 11

    $default  reduce using rule 6 (chunk_layer)

    laststat  go to state 16


State 10

   18 laststat: RETURN .

    $default  reduce using rule 18 (laststat)


State 11

   19 laststat: BREAK .

    $default  reduce using rule 19 (laststat)


State 12

    7 chunk_layer: stat laststat .
    8            | stat laststat . SEMICOLON

    SEMICOLON  shift, and go to state 17

    $default  reduce using rule 7 (chunk_layer)


State 13

   12 chunk_layer: chunk_layer stat SEMICOLON .
   15            | chunk_layer stat SEMICOLON . laststat

    RETURN  shift, and go to state 10
    BREAK   shift, and go to state 11

    $default  reduce using rule 12 (chunk_layer)

    laststat  go to state 18


State 14

   16 chunk_layer: chunk_layer stat stat . SEMICOLON laststat SEMICOLON

    SEMICOLON  shift, and go to state 19


State 15

   13 chunk_layer: chunk_layer stat laststat .
   14            | chunk_layer stat laststat . SEMICOLON

    SEMICOLON  shift, and go to state 20

    $default  reduce using rule 13 (chunk_layer)


State 16

    9 chunk_layer: stat SEMICOLON laststat .
   10            | stat SEMICOLON laststat . SEMICOLON

    SEMICOLON  shift, and go to state 21

    $default  reduce using rule 9 (chunk_layer)


State 17

    8 chunk_layer: stat laststat SEMICOLON .

    $default  reduce using rule 8 (chunk_layer)


State 18

   15 chunk_layer: chunk_layer stat SEMICOLON laststat .

    $default  reduce using rule 15 (chunk_layer)


State 19

   16 chunk_layer: chunk_layer stat stat SEMICOLON . laststat SEMICOLON

    RETURN  shift, and go to state 10
    BREAK   shift, and go to state 11

    laststat  go to state 22


State 20

   14 chunk_layer: chunk_layer stat laststat SEMICOLON .

    $default  reduce using rule 14 (chunk_layer)


State 21

   10 chunk_layer: stat SEMICOLON laststat SEMICOLON .

    $default  reduce using rule 10 (chunk_layer)


State 22

   16 chunk_layer: chunk_layer stat stat SEMICOLON laststat . SEMICOLON

    SEMICOLON  shift, and go to state 23


State 23

   16 chunk_layer: chunk_layer stat stat SEMICOLON laststat SEMICOLON .

    $default  reduce using rule 16 (chunk_layer)
